research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__node__tests__node_conditions_are_parsed.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: VM(
        VM {
            source: None,
            _source_helper: None,
            resources: Resources {
                ram: 2000000000,
                cpu: 2,
            },
            features: {},
            conditions: {
                "condition-1": "admin",
            },
            injects: {},
            vulnerabilities: [],
            _roles_helper: Some(
                MixedRoles(
                    {
                        "admin": Username(
                            "username",
                        ),
                    },
                ),
            ),
            roles: None,
        },
    ),
    description: None,
}
