research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__node__tests__same_name_for_role_only_saves_one_role.snap
---
source: sdl-parser/src/node.rs
expression: scenario
---
name: test-scenario
description: some-description
nodes:
  win-10:
    conditions: {}
    description: ~
    features: {}
    injects: {}
    resources:
      ram: 2147483648
      cpu: 2
    roles:
      admin:
        username: username2
        entities: ~
    source:
      name: windows10
      version: "*"
    type: VM
    vulnerabilities: []
features: ~
infrastructure: ~
conditions: ~
vulnerabilities: ~
metrics: ~
evaluations: ~
tlos: ~
entities: ~
goals: ~
injects: ~
events: ~
scripts: ~
stories: ~

