research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__node__tests__vm_source_longhand_is_parsed.snap
---
source: sdl-parser/src/node.rs
expression: node
---
Node {
    type_field: VM(
        VM {
            source: None,
            _source_helper: Some(
                Source(
                    Source {
                        name: "package-name",
                        version: "1.2.3",
                    },
                ),
            ),
            resources: Resources {
                ram: 2000000000,
                cpu: 2,
            },
            features: {},
            conditions: {},
            injects: {},
            vulnerabilities: [],
            _roles_helper: None,
            roles: None,
        },
    ),
    description: None,
}
